[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/CrossHair/CrossHair_04.png" type="Texture" id=1]
[ext_resource path="res://Objects/CrossHair/CrossHairSprite.gd" type="Script" id=2]
[ext_resource path="res://Objects/CrossHair/MouseHandler.gd" type="Script" id=3]
[ext_resource path="res://Objects/CrossHair/CrossHair_RadialProgress.png" type="Texture" id=4]
[ext_resource path="res://Objects/CrossHair/CrossHair_00.png" type="Texture" id=5]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/CrossHair_RadialProgress.png-40146afa0716479ff00fdae85f942d49.stex"

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("CrossHairSprite/RadialProgressRight:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("CrossHairSprite/RadialProgressRight:self_modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.203922, 1 ), Color( 0, 1, 0.203922, 0 ), Color( 0, 1, 0.203922, 1 ), Color( 0, 1, 0.203922, 0 ), Color( 0, 1, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrossHairSprite/RadialProgressRight:value")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 100.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("CrossHairSprite/RadialProgressLeft:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CrossHairSprite/RadialProgressLeft:self_modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.00392157, 1, 0.976471, 1 ), Color( 0, 1, 0.203922, 0 ), Color( 0.00392157, 1, 0.976471, 1 ), Color( 0, 1, 0.203922, 0 ), Color( 0.00392157, 1, 0.976471, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrossHairSprite/RadialProgressLeft:value")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 100.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Reload"
tracks/0/type = "value"
tracks/0/path = NodePath("CrossHairSprite/ProgressBarRight:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[node name="CrossHair" type="CanvasLayer"]
layer = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -51.0, 51.0 ]
}
inGame_Cursor = ExtResource( 5 )

[node name="CrossHairSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="RadialProgressRight" type="TextureProgress" parent="CrossHairSprite"]
self_modulate = Color( 0, 1, 0.203922, 1 )
margin_left = -102.0
margin_top = -102.0
margin_right = 410.0
margin_bottom = 410.0
rect_scale = Vector2( 0.4, 0.4 )
texture_progress = ExtResource( 4 )
fill_mode = 4
radial_fill_degrees = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadialProgressLeft" type="TextureProgress" parent="CrossHairSprite"]
self_modulate = Color( 0.00392157, 1, 0.976471, 1 )
margin_left = -102.0
margin_top = -102.0
margin_right = 410.0
margin_bottom = 410.0
rect_scale = Vector2( 0.4, 0.4 )
texture_progress = SubResource( 1 )
fill_mode = 5
radial_fill_degrees = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarRight" type="ProgressBar" parent="CrossHairSprite"]
margin_left = 112.0
margin_top = 64.0
margin_right = 240.0
margin_bottom = 82.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RRadialAnimPlayer" type="AnimationPlayer" parent="."]
anims/DashReset = SubResource( 4 )
anims/DashResetFinal = SubResource( 5 )

[node name="LRadialAnimPlayer" type="AnimationPlayer" parent="."]
anims/TeleportReset = SubResource( 6 )
anims/TeleportResetFinal = SubResource( 7 )

[node name="RBarAnimPlayer" type="AnimationPlayer" parent="."]
anims/Reload = SubResource( 8 )
[connection signal="animation_finished" from="RRadialAnimPlayer" to="." method="_on_RAnimPlayer_animation_finished"]
[connection signal="animation_finished" from="LRadialAnimPlayer" to="." method="_on_LAnimPlayer_animation_finished"]
[connection signal="animation_finished" from="RBarAnimPlayer" to="." method="_on_RBarAnimPlayer_animation_finished"]
